[package]
name = "dbussy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive", "cargo"] }
jq-rs = { version = "0.4.1", features = ["bundled"] }
serde_json = "1.0.83"
zbus = "2.3.2"
